--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2608,6 +2608,14 @@ input:checked + .slider:before {
   color: #1d1d1d;
 }
 
+.dark .post-single .dropdown i:hover {
+  color: #fff;
+}
+
+.dark .modal-content {
+  background-color: #1d1d1d;
+}
+
 .dark .navbar-toggler span {
   background-color: #ffffff;
   -webkit-box-shadow: 0px -8px 0 0px #ffffff, 0px 8px 0 0px #ffffff;
